# menage2

./: .coveragerc  .gitignore  CLAUDE.md  README.md  README.txt  development.ini  devenv.nix  explored.md  production.ini  pyproject.toml  pytest.ini  testing.ini
3rdparty-docs/: htmx-form-json.md
src/menage2/: __init__.py  dateparse.py  format.py  principals.py  publictransport.py  recurrence.py  routes.py  security.py  tweens.py  utils.py
src/menage2/alembic/: env.py
src/menage2/alembic/versions/: 20230805_acdb4d095c72.py  20230807_05f80527f85f.py  20230807_a6f2d1215b8b.py  20230808_89646db6e305.py  20230819_3180de9cf11d.py  20231228_0c8307e920e3.py  20241227_19b0c0697f0c.py  20250105_b7f3043fad27.py  20260419_190dd630e542.py  20260419_33475679c961.py  20260419_85c42b840e15.py  20260419_89f2eea2d3e1.py  20260419_acd134b0e75d.py  20260419_f12afd1240f1.py  20260420_375865678696.py  20260426_44458231bd57.py  20260426_99632bc17522.py  20260426_a9b8ea9793d3.py  20260428_de613bd28fbf.py  20260428_f316f0e748c4.py  20260428_protocols_owner_not_null.py  20260428_teams_and_assignees.py  20260429_64d70dadbe1a.py  20260503_245e10c85a50.py  20260506_9a43530c7474.py  20260506_f259066775a8.py
src/menage2/models/: __init__.py  config.py  planner.py  protocol.py  recipe.py  team.py  todo.py  user.py
src/menage2/schemas/: __init__.py
src/menage2/scripts/: initialize_db.py
src/menage2/static/: LICENSE.txt  composite-input.js  form-json.js  menage.js  passkeys.js  tailwind.css  theme.css
src/menage2/templates/: 404.pt  _done_items.pt  _protocol_run_partial.pt  _recurrence_history.pt  _task_subnav.pt  _todo_details_panel.pt  _todo_details_panel_empty.pt  _todo_details_panel_multiple.pt  _todo_form.pt  _todo_groups.pt  _todo_item.pt  dashboard.pt  dashboard_pt_departures.pt  dashboard_pt_hbf.pt  dashboard_recipes.pt  edit_recipe.pt  form.pt  ingredient_recipes.pt  layout.pt  layout_fullscreen.pt  letscook.pt  list_ingredients.pt  list_recipes.pt  list_todos.pt  list_todos_done.pt  list_todos_hold.pt  list_todos_scheduled.pt  list_weeks.pt  planner.pt  recipe_steps.pt  rtm_login.pt  show_week.pt  suggest_ingredient.pt  timers.pt  timers_widget.pt
src/menage2/templates/admin/: composite_playground.pt  dashboard_token.pt  operations.pt  team_form.pt  teams.pt  user_form.pt  users.pt
src/menage2/templates/auth/: account.pt  change_password.pt  forgot_password.pt  login.pt  passkeys.pt  reset_password.pt  setup.pt
src/menage2/templates/protocols/: _protocol_item.pt  _run_items.pt  _run_panel.pt  edit.pt  list.pt  run.pt
src/menage2/tests/: _browser_helpers.py  conftest.py  test_account_integration.py  test_admin_integration.py  test_attachments.py  test_auth_integration.py  test_auth_unit.py  test_composite_browser.py  test_dashboard_integration.py  test_dateparse.py  test_functional.py  test_nav_integration.py  test_planner.py  test_protocols.py  test_protocols_browser.py  test_publictransport.py  test_recipes_browser.py  test_recurrence.py  test_teams.py  test_teams_browser.py  test_todos.py  test_todos_browser.py  test_views.py
src/menage2/views/: account.py  admin.py  attachment.py  auth.py  dashboard.py  ingredient.py  letscook.py  notfound.py  planner.py  protocol.py  recipe.py  rtm.py  todo.py
tailwind/: package-lock.json  package.json  tailwind.config.js
tailwind/css/: input.css
