[project]
name = "menage2"
version = "0.1.0"
description = ""
authors = [{ name = "Christian Theune", email = "christian@theune.cc" }]
requires-python = "~=3.10"
readme = "README.md"
license.text = "MIT"
dependencies = [
    "pyramid>=2.0.1,<3",
    "pyramid-chameleon>=0.3,<0.4",
    "pyramid-debugtoolbar~=4.10",
    "waitress>=2.1.2,<3",
    "plaster-pastedeploy>=1.0.1,<2",
    "alembic>=1.11.1,<2",
    "pyramid-retry>=2.1.1,<3",
    "pyramid-tm~=2.5",
    "sqlalchemy>=2.0.19,<3",
    "transaction>=3.1.0,<4",
    "zope-sqlalchemy~=3.0",
    "babel>=2.12.1,<3",
    "pytz~=2023.3",
    "peppercorn",
    "rtmapi>=0.7.2,<0.8",
    "httplib2>=0.22.0,<0.23",
    "psycopg2-binary>=2.9.9,<3",
    "cachecontrol>=0.13.1,<0.14",
    "arrow>=1.3.0,<2",
    "filelock>=3.13.1,<4",
    "llm>=0.19.1",
    "llm-gpt4all>=0.4",
]

[project.scripts]
initialize_menage2_db = "menage2.scripts.initialize_db:main"
set_ingredient_tags = "menage2.scripts.ingredients:main"

[project.entry-points."paste.app_factory"]
main = "menage2:main"

[dependency-groups]
dev = [
    "webtest>=3.0.0,<4",
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
]

[tool.uv.sources]
peppercorn = { git = "https://github.com/ctheune/peppercorn.git", branch = "htmx-workaround-1686-wrong-form-dataset-construction" }

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"
